compiler/weave_syntax/tests/data/Trivia.error
error: Expected '{'
        --> <source>:7:8
         |
       7 |     if let Some(comment) /* for Some() */ = /* for TryReadComment() */ self.TryReadComment() {
         |        ^^^
error: Unexpected tokens
        --> <source>:9:7
         |
       9 |     } else {
         |       ^^^^^^
      10 |         /* before assignment */ trivia = Trivia.None /* after assignment */
         | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
